add new changes to html website udemy course

--- a/public/contact.html
+++ b/public/contact.html
@@ -1,10 +1,25 @@
-<h1>Contact Me</h1>
-<p>Tel: +31(0)625505060</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<style>
+  body {text-align: center;
+        background-color: lightblue;
+  }
+</style>
+<h1>Contact Me
+<h2><p>Tel: +31(0)625505060</p>
 <p>Email: total-health@kpnmail.nl</p>
 <p>Address:</p>
 <p>
   Klaproos 23<br />
   1689 TL in Zwaag<br />
-  The Netherlands<br />
-  Website: <a href="https://totalegezondheid.com/"></a>
+  The Netherlands<br /></h2>
+  <h1>Website: <a href="https://totalegezondheid.com/"></a></h1>
 </p>
