--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
   <style>
-  body {text-align: center;}
+  body {text-align: center;
+        background-color: lightblue;
+}
   </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edward's Portfolio</title>
-
+    
 </head>
 
 <body>
-    <h1>Edward Hillenaar's Portfolio</h1>
+    <h1 style="color:Blue;">Edward Hillenaar's Portfolio</h1>
     <a href="./public/about.html"><img src="./public/Ed.jpg" width="750"</a>
     <h2> About Me</h2>
     <h2><a href="./public/contact.html">Adress and Contact</a></h2>
     <hr />
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" height="450" alt="movie ranking project preview"/>
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday-invite.png" height="900" alt="birthday invite project preview"/>
+    <h1><a href="./public/movie-ranking.html">Movie Ranking Project</a></h1>
+    <img src="./assets/images/movie-ranking.png" width="450" alt="movie ranking project preview"/>
+    <h1><a href="./public/birthday-invite.html">Birthday Invite Project</a></h1>
+    <img src="./assets/images/birthday-invite.png" width="500" alt="birthday invite project preview"/>
     <hr />
     
 </body>
