--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,3 +1,20 @@
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<style>
+  body {text-align: center;
+        background-color: lightblue;
+  }
+</style>
+
+
 <!-- This is one possible solution -->
 <h1>It's My Birthday!</h1>
 <h2>On the 15th December</h2>
