--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,3 +1,19 @@
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<style>
+  body {text-align: center;
+        background-color: lightblue;
+  }
+</style>
+
 <h1>The Best Movies According to Edward</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
