--- a/public/contact.html
+++ b/public/contact.html
@@ -21,5 +21,5 @@
   Klaproos 23<br />
   1689 TL in Zwaag<br />
   The Netherlands<br /></h2>
-  <h1>Website: <a href="https://totalegezondheid.com/"></a></h1>
+  <h1>Website: <a href="https://totalegezondheid.com/">Total Health</a></h1>
 </p>
